# Utils

./: .gitignore  ReadMe.md  pyproject.toml  requirements.txt
CodeAssist/: CodeAssist.py  cli.py
Kairos/: Kairos.py  cli.py
genreqs_tool/: cli.py  genreqs.py  test_cases.py
scripts/: Auto_Doc_Code_WIP.ipynb  Join_Graph.py  SQLtoNL.py  df_utils.py  transpileSQLGlot.py
