[tool.poetry]
name = "CLI Tools"
version = "1.0.0"
description = "Collection of CLI tools, some useful, some not"
authors = ["VarSamLewis <samlewis1999.sl@gmail.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "genreqs_tool" 

[[tool.poetry.packages]]
include = "Kairos"

[[tool.poetry.packages]]
include = "CodeAssist"

[tool.poetry.dependencies]
python = ">=3.11"
typer = "*"
openai = "*"
rich = "*"

[tool.poetry.scripts]
genreqs = "genreqs_tool.cli:run_genreqs"
printreqs = "genreqs_tool.cli:run_printreqs"
provide_guidance = "Kairos.cli:summon_kairos"
input_request = "CodeAssist.cli:run_LLMRequest"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
